@@ -2,6 +2,8 @@ package fr.nico.sqript.expressions;
 
 import fr.nico.sqript.ScriptManager;
 import fr.nico.sqript.compiling.*;
+import fr.nico.sqript.compiling.parsers.ScriptExpressionParser;
+import fr.nico.sqript.meta.ExpressionDefinition;
 import fr.nico.sqript.structures.IOperation;
 import fr.nico.sqript.structures.ScriptContext;
 import fr.nico.sqript.structures.ScriptElement;
@@ -15,288 +17,242 @@ import java.util.*;
 
 public class ExprCompiledExpression extends ScriptExpression {
 
-    public LinkedList<CompiledToken> out = new LinkedList<>();
+    public Node ast;
     public ScriptToken in;
 
-    public ScriptExpression[] operands;
-    public ScriptOperator[] operators;
-
-    public ExprCompiledExpression(ScriptToken infixedExpression, ScriptExpression[] operands, ScriptOperator[] operators) throws ScriptException.ScriptMissingTokenException {
-        this.operands = operands;
-        this.operators = operators;
-        this.in = infixedExpression;
-        shuntingYard();
+    public ExprCompiledExpression(Node tree) {
+        ast = tree;
+        //System.out.println("AST : "+ast);
     }
 
+    public static List<Node> astToRPN(Node tree) {
+        //System.out.println("Parsing astToRPN : "+tree.toString());
+        ArrayList<Node> out = new ArrayList<>();
 
-    private Stack<CompiledToken> pile = new Stack<>();
-
-    public ExprCompiledExpression(ExpressionTree tree) {
-        out = astToRPN(tree);
-    }
-
-    public void shuntingYard() throws ScriptException.ScriptMissingTokenException {
-        //System.out.println("Compiling : "+in.text +" with "+ Arrays.stream(operands).map(a-> {            try {                return (a instanceof ExprPrimitive ? a.get(null).toString():"/")+" ";            } catch (ScriptException e) {                e.printStackTrace();            }            return "";        }).collect(Collectors.joining())+" with operators : "+ Arrays.toString(operators));
-        //Shunting-yard algorithm implementation by Nico- to get a RPN ("Notation polonaise inversée") with an unfixed notation
-
-        int c = 0;
-        while (c < in.getText().length()) {//While there are tokens to be read
-            char r = in.getText().charAt(c);
-            //Argument separator
-            if (r == ',') {
-                while (!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) {
-                    out.add(pile.pop());
-                }
-                if (pile.empty()) {
-                    //System.out.println("Parenthesage error");
-                }
+        if (tree.getChildren() != null) {
+            for (Node child : tree.getChildren()) {
+                if (child != null)
+                    out.addAll(0, astToRPN(child));
+                else out.add(0, null);
             }
-            //Operand
-            if (r == '@' && (c == 0 || in.getText().charAt(c - 1) != '\\')) {
-                //Eating full token;
-                char n;
-
-                //Skipping first parenthese
-                c++;
-
-                StringBuilder id = new StringBuilder();
-                while (c + 1 < in.getText().length() && (n = in.getText().charAt(c + 1)) <= '9' && n >= '0') {
-                    c++;
-                    id.append(n);
-                }
-
-                // Skipping separation character
-                c++;
-
-                StringBuilder arity = new StringBuilder();
-                while (c + 1 < in.getText().length() && (n = in.getText().charAt(c + 1)) <= '9' && n >= '0') {
-                    c++;
-                    arity.append(n);
-                }
-                int id_int = Integer.parseInt(id.toString());
-                int arity_int = Integer.parseInt(arity.toString());
-
-                //Skipping last parenthese
-                c++;
-
-                CompiledToken e = new CompiledToken(arity_int, operands[id_int]);
-                if (arity_int > 0)
-                    pile.add(e);
-                else out.add(e);
-            } else if (r == '#' && (c == 0 || in.getText().charAt(c - 1) != '\\')) {//Operator
-                char n;
-
-                //Skipping first parenthese
-                c++;
-
-                String id = "";
-                while (c + 1 < in.getText().length() && (n = in.getText().charAt(c + 1)) <= '9' && n >= '0') {
-                    c++;
-                    id += n;
-                }
-
-                //Skipping last parenthese
-                c++;
-
-                int id_int = Integer.parseInt(id);
-                ScriptOperator o1 = ScriptManager.operators.get(id_int);
-                //System.out.println("#{"+id_int+"} is a "+o1);
-                if (o1.postfixed) {
-                    //Already post-fixed, we add it normally
-                    out.add(new CompiledToken(o1));
-                } else {
-                    ScriptOperator o2;
-                    if (!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) {
-                        o2 = (operators[pile.peek().getOperatorId()]);
-                        while ((!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) && (
-                                (o1.associativity == ScriptOperator.Associativity.LEFT_TO_RIGHT
-                                        && (o2 = operators[pile.peek().getOperatorId()]).priority >= o1.priority) ||
-                                        (o1.associativity == ScriptOperator.Associativity.RIGHT_TO_LEFT
-                                                && o1.priority < o2.priority))) {
-                            out.add(pile.pop());
-                        }
-                    }
-                    pile.push(new CompiledToken(o1));
-                }
-            } else if (r == '(') {
-                pile.push(new CompiledToken(EnumTokenType.LEFT_PARENTHESIS));
-            } else if (r == ')') {
-                while (!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) {
-                    out.add(pile.pop());
-                }
-                if (pile.empty()) {
-                    throw new ScriptException.ScriptMissingTokenException(getLine());
-                }
-                pile.pop();
-
-                if (!pile.isEmpty() && pile.peek().arity > 0) {
-                    out.add(pile.pop());
-                }
-
-            }
-            c++;
+            tree.setChildren(new Node[tree.getChildren().length]);
         }
-        while (!pile.empty()) out.add(pile.pop());
-        //System.out.println(getFullRPN());;
-    }
-
-    public static LinkedList<CompiledToken> astToRPN(ExpressionTree tree){
-        System.out.println("Parsing astToRPN : "+tree.toString());
-        LinkedList<CompiledToken> out = new LinkedList<>();
-        if(tree.getType() == EnumTokenType.EXPRESSION){
-            out.add(new CompiledToken(tree.getLeavesCount(), tree.getExpression()));
-        } else if(tree.getType() == EnumTokenType.OPERATOR){
-            out.add(new CompiledToken(tree.getOperator()));
+        if (tree instanceof NodeExpression || tree instanceof NodeOperation) {
+            out.add(tree);
         }
-        if(tree.getLeaves() != null)
-            for(ExpressionTree leaf : tree.getLeaves()){
-                out.addAll(0, astToRPN(leaf));
-            }
         return out;
     }
 
-    public static ExpressionTree rpnToAST(LinkedList<CompiledToken> nodes){
-        Stack<ExpressionTree> treeStack = new Stack<>();
-        System.out.println("RPN to AST from rpn : "+nodes);
+    public static Node rpnToAST(List<Node> nodes) {
+        Stack<Node> treeStack = new Stack<>();
+        //System.out.println("RPN to AST from rpn : " + nodes);
         while (!nodes.isEmpty()) {//While there are tokens to be read
-            CompiledToken token = nodes.remove(0);
-            if (token.getType() == EnumTokenType.EXPRESSION) {
-                if(token.getArity() > 0){
-                    ExpressionTree merged = new ExpressionTree(token.getExpression());
-                    while(!treeStack.empty()){
-                        merged.addLeave(treeStack.pop());
+            Node node = nodes.remove(0);
+            if (node instanceof NodeExpression) {
+                NodeExpression nodeExpression = (NodeExpression) node;
+                //System.out.println(nodeExpression+" arity is "+nodeExpression.getArity());
+                if (nodeExpression.getArity() > 0) {
+                    Node merged = new NodeExpression(nodeExpression.getExpression());
+                    for (int i = 0; i < nodeExpression.getArity(); i++) {
+                        if (!treeStack.empty())
+                            merged.addChild(treeStack.pop());
+                        else merged.addChild(null);
                     }
                     treeStack.push(merged);
-                }else
-                    treeStack.push(new ExpressionTree(token.expression));
-            } else if (token.getType() == EnumTokenType.OPERATOR) {//Operator
-                ScriptOperator operator = token.getOperator();
-                ExpressionTree merged = new ExpressionTree(operator);
-                while(!treeStack.empty()){
-                    merged.addLeave(treeStack.pop());
+                } else
+                    treeStack.push(nodeExpression);
+            } else if (node instanceof NodeOperation) {//Operator
+                NodeOperation nodeOperation = (NodeOperation) node;
+                ScriptOperator operator = nodeOperation.getOperator();
+                Node merged = new NodeOperation(operator);
+                //System.out.println("treeStack:" + treeStack);
+                for (int i = 0; i < (operator.unary ? 1 : 2); i++) {
+                    if (!treeStack.empty())
+                        merged.addChild(treeStack.pop());
+                    else
+                        merged.addChild(null);
                 }
                 treeStack.push(merged);
             }
-
         }
+        //System.out.println("Actual stack : "+treeStack);
         return treeStack.pop();
     }
 
-    public static LinkedList<CompiledToken> infixToRPN(List<ExpressionTree> nodes) throws ScriptException.ScriptMissingTokenException {
-        System.out.println("Infix to RPN with : "+nodes);
-        Stack<CompiledToken> pile = new Stack<>();
-        LinkedList<CompiledToken> out = new LinkedList<>();
+    public static LinkedList<Node> infixToRPN(List<Node> nodes) throws ScriptException.ScriptMissingTokenException {
+        //System.out.println("Infix to RPN with : "+nodes);
+        Stack<Node> pile = new Stack<>();
+        LinkedList<Node> out = new LinkedList<>();
         while (!nodes.isEmpty()) {//While there are tokens to be read
-            ExpressionTree token = nodes.remove(0);
+            Node node = nodes.remove(0);
             //Operand
-            if (token.getType() == EnumTokenType.EXPRESSION) {
-                int arity = token.getLeavesCount();
-                CompiledToken e = new CompiledToken(arity, token.getExpression());
+            if (node instanceof NodeExpression) {
+                NodeExpression nodeExpression = (NodeExpression) node;
+                int arity = nodeExpression.getArity();
                 if (arity > 0)
-                    pile.add(e);
-                else out.add(e);
-                System.out.println(out);
-            } else if (token.getType() == EnumTokenType.OPERATOR) {//Operator
-                ScriptOperator operator = token.getOperator();
-                System.out.println("Operator is : "+operator);
+                    pile.add(nodeExpression);
+                else out.add(nodeExpression);
+                //System.out.println(out);
+            } else if (node instanceof NodeOperation) {
+                NodeOperation nodeOperation = (NodeOperation) node;
+                nodeOperation.setChildren(null);
+                ScriptOperator operator = nodeOperation.getOperator();
+                //System.out.println("Operator is : "+operator);
                 if (operator.postfixed) {
                     //Already post-fixed, we add it normally
-                    out.add(new CompiledToken(operator));
+                    out.add(nodeOperation);
                 } else {
-                    ScriptOperator operator2;
-                    if (!pile.empty() && pile.peek().type == EnumTokenType.OPERATOR) {
-                        operator2 = pile.peek().getOperator();
-                        while ((!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) && (
+                    NodeOperation operator2 = null;
+                    if (!pile.empty() && pile.peek() instanceof NodeOperation) {
+                        operator2 = ((NodeOperation) pile.peek());
+                        while ((!pile.empty() && pile.peek() instanceof NodeParenthesis && (((NodeParenthesis) (pile.peek())).getType() == EnumTokenType.LEFT_PARENTHESIS) && (
                                 (operator.associativity == ScriptOperator.Associativity.LEFT_TO_RIGHT
-                                        && (operator2 = pile.peek().getOperator()).priority >= operator.priority) ||
+                                        && (operator2 = ((NodeOperation) pile.peek())).getOperator().priority >= operator.priority) ||
                                         (operator.associativity == ScriptOperator.Associativity.RIGHT_TO_LEFT
-                                                && operator.priority < operator2.priority))) {
+                                                && operator.priority < operator2.getOperator().priority)))) {
                             out.add(pile.pop());
                         }
                     }
-                    System.out.println("Before pile is : "+pile);
-                    pile.push(new CompiledToken(operator));
-                    System.out.println("Pusing on pile : "+operator+" = "+pile+" ("+pile.size()+")");
+                    //System.out.println("Before pile is : "+pile);
+                    pile.push(nodeOperation);
+                    //System.out.println("Pushing on pile : "+operator+" = "+pile+" ("+pile.size()+")");
                 }
-                System.out.println(out);
-            } else if (token.getType() == EnumTokenType.LEFT_PARENTHESIS) {
-                pile.push(new CompiledToken(EnumTokenType.LEFT_PARENTHESIS));
-            } else if (token.getType() == EnumTokenType.RIGHT_PARENTHESIS) {
-                while (!pile.empty() && pile.peek().type != EnumTokenType.LEFT_PARENTHESIS) {
-                    out.add(pile.pop());
-                }
-                if (pile.empty()) {
-                    throw new ScriptException.ScriptMissingTokenException(nodes.get(0).getExpression().getLine());
-                }
-                pile.pop();
-                if (!pile.isEmpty() && pile.peek().arity > 0) {
-                    out.add(pile.pop());
+                //System.out.println(out);
+            } else if (node instanceof NodeParenthesis) {
+                NodeParenthesis nodeParenthesis = (NodeParenthesis) node;
+                if (nodeParenthesis.getType() == EnumTokenType.LEFT_PARENTHESIS) {
+                    pile.push(nodeParenthesis);
+                } else {
+                    while (!pile.empty() || (pile.peek() instanceof NodeParenthesis && (((NodeParenthesis) (pile.peek())).getType() == EnumTokenType.LEFT_PARENTHESIS))) {
+                        out.add(pile.pop());
+                    }
+                    if (pile.empty()) {
+                        throw new ScriptException.ScriptMissingTokenException(nodes.get(0).getLine());
+                    }
+                    pile.pop();
+                    if (!pile.isEmpty() && (pile.peek() instanceof NodeExpression && (((pile.peek())).getChildren().length > 0))) {
+                        out.add(pile.pop());
+                    }
                 }
             }
         }
-        System.out.println("Emptying pile : "+pile);
+        //System.out.println("Emptying pile : "+pile);
         while (!pile.empty()) out.add(pile.pop());
-        System.out.println("Returning : "+out);
+        //System.out.println("Returning : "+out);
         return out;
     }
 
-
-    public String getRPN() {
-        String r = "";
-        for (CompiledToken s : out) {
-            r += s;
-        }
-        return r;
-    }
-
-    public String getFullRPN() {
-        StringBuilder r = new StringBuilder();
-        r.append("COMPILED ");
-        for (CompiledToken s : out) {
-            r.append(s.toString()).append(" ");
-        }
-        return r.toString();
-    }
-
-    public int getOpCode(String symbol, boolean binary) {
-        for (int i = 0; i < ScriptManager.operators.size(); i++) {
-            ScriptOperator o = operators[i];
-            if (o.symbol.equals(symbol) && (o.unary == binary)) return i;
-        }
-        return -1;
-    }
-
-    public Class<? extends ScriptElement> getReturnType() {
-        return rpnToAST(out).getReturnType();
+    public Class getReturnType() {
+        return ast.getReturnType();
     }
 
     @Override
+    public ScriptType get(ScriptContext context, ScriptType<?>[] parameters) throws ScriptException, ScriptException.ScriptInterfaceNotImplementedException {
+        return get(ast, context, null);
+    }
+
+    private ScriptType get(Node node, ScriptContext context, Class[] validTypes) throws ScriptException {
+        //System.out.println("Getting for node : "+node+" wanting : "+Arrays.toString(validTypes));
+        if (node instanceof NodeExpression) {
+            ScriptExpression expression = ((NodeExpression) node).getExpression();
+            ExpressionDefinition expressionDefinition = ScriptManager.getDefinitionFromExpression(expression.getClass());
+            int arity = node.getChildren() == null ? 0 : node.getChildren().length;
+            ScriptType[] types = new ScriptType[arity];
+            //System.out.println("Children : "+ Arrays.toString(node.getChildren()));
+            for (int i = 0; i < arity; i++) {
+                types[i] = get(node.getChildren()[i], context, expressionDefinition == null ? new Class[]{ScriptElement.class} : expressionDefinition.transformedPatterns[expression.getMatchedIndex()].getValidTypes(i));
+            }
+            return expression.get(context, types);
+        } else if (node instanceof NodeOperation) {
+            ScriptOperator o = ((NodeOperation) node).getOperator();
+            final ScriptType<?> o1 = get(node.getChildren()[0], context, new Class[]{ScriptElement.class});
+            ScriptType<?> o2 = null;
+            if (node.getChildren().length == 2)
+                o2 = get(node.getChildren()[1], context, new Class[]{ScriptElement.class});
+            if (o == ScriptOperator.EQUAL) {
+                return (new TypeBoolean(o1.equals(o2)));
+            } else if (o == ScriptOperator.NOT_EQUAL) {
+                return (new TypeBoolean(!o1.equals(o2)));
+            } else if (o.unary) {
+                return ScriptManager.getUnaryOperation(o1.getClass(), o).getOperation().operate(o1, null);
+            } else {
+                final Class<? extends ScriptType> c1 = o1 == null ? null : o1.getClass();
+                final Class<? extends ScriptType> c2 = o2 == null ? null : o2.getClass();
+                IOperation operation = ScriptManager.getBinaryOperation(c2, c1, o).getOperation();
+                if (operation == null) {
+                    throw new ScriptException.ScriptOperationNotSupportedException(getLine(), o, c1, c2);
+                }
+                return operation.operate(o2, o1);
+            }
+        } else if (node instanceof NodeSwitch) {
+            if (validTypes == null)
+                return get(node.getChildren()[0], context, null);
+            else for (Node branch : node.getChildren()) {
+                if (ScriptExpressionParser.isTypeValid(branch.getReturnType(), validTypes)) {
+                    ScriptType result = get(branch, context, null);
+                    if (ScriptExpressionParser.isTypeValid(result.getClass(), validTypes))
+                        return result;
+                }
+            }
+        }
+        return null;
+    }
+
+    @Override
+    public boolean set(ScriptContext context, ScriptType to, ScriptType<?>[] parameters) throws ScriptException {
+        return set(ast, context, to);
+    }
+
+    private boolean set(Node ast, ScriptContext context, ScriptType to) throws ScriptException {
+        if (ast instanceof NodeExpression) {
+            ScriptExpression expression = ((NodeExpression) ast).getExpression();
+            ExpressionDefinition expressionDefinition = ScriptManager.getDefinitionFromExpression(expression.getClass());
+            int arity = ast.getChildren() == null ? 0 : ast.getChildren().length;
+            ScriptType[] types = new ScriptType[arity];
+            assert expressionDefinition != null;
+            for (int i = 0; i < arity; i++) {
+                types[i] = get(ast.getChildren()[i], context, expressionDefinition.transformedPatterns[expression.getMatchedIndex()].getValidTypes(i));
+            }
+            return expression.set(context, to, types);
+        } else if (ast instanceof NodeSwitch) {
+            for (Node n : ast.getChildren()) {
+                if (n instanceof NodeExpression) {
+                    return set(n, context, to);
+                }
+            }
+        }
+        return false;
+    }
+
+    /*
+    @Override
     public ScriptType get(ScriptContext context, ScriptType<?>[] parameters) throws ScriptException {
         final Stack<ScriptType> terms = new Stack<>();
-        System.out.println("Evaluating get at line "+line+" : " + out+" WITH ("+getFullRPN()+")");
+        //System.out.println("Evaluating get at line "+line+" : " + getFullRPN());
         //Optimisation
-        if (out.size() == 1) {
-            return out.get(0).getExpression().get(context);
-        } else for (CompiledToken s : out) {
-            if (s.getType() == EnumTokenType.EXPRESSION) {
-                final ScriptExpression se = s.getExpression();
+        if (rpn.size() == 1) {
+            return ((NodeExpression) rpn.get(0)).getExpression().get(context);
+        } else for (Node s : rpn) {
+            if (s instanceof NodeExpression) {
+                final ScriptExpression se = ((NodeExpression)(s)).getExpression();
                 if (se == null) {
                     terms.push(null);
                 } else {
                     final List<ScriptType<?>> arguments = new ArrayList<>();
-                    //System.out.println("Token is : "+s +" with arity : "+s.arity);
-                    for (int i = 0; i < s.getArity(); i++) {
+                    //System.out.println("Token is : "+s +" with arity : "+((NodeExpression) s).getArity());
+                    for (int i = 0; i < ((NodeExpression)(s)).getArity(); i++) {
                         //Handle when some parameters of an expression are empty
                         //System.out.println("Peeking is : "+terms.peek());
                         arguments.add(terms.isEmpty() ? null : terms.pop());
                     }
+
                     ScriptType<?> t = se.get(context, arguments.toArray(new ScriptType[0]));
                     if (t == null)
                         t = new TypeNull();
                     terms.push(t);
                 }
-            } else if (s.getType() == EnumTokenType.OPERATOR) {
-                final ScriptOperator o = s.getOperator();
+            } else if (s instanceof NodeOperation) {
+                final ScriptOperator o = ((NodeOperation)(s)).getOperator();
                 //System.out.println("Operator is : "+o);
                 if (o == ScriptOperator.EQUAL) {
                     final ScriptType<?> o1 = terms.pop();
@@ -327,28 +283,30 @@ public class ExprCompiledExpression extends ScriptExpression {
         }
         return terms.pop();
     }
+    */
 
+    /*
     @Override
     public boolean set(ScriptContext context, ScriptType to, ScriptType<?>[] parameters) throws ScriptException {
         final Stack<ScriptExpression> expressions = new Stack<>();
         final Stack<ScriptType> types = new Stack<>();
-        ////System.out.println("Evaluating set : " + getFullRPN());
-        if (out.size() == 1) {
-            return operands[0].set(context, to, new ScriptType[0]);
-        } else for (CompiledToken s : out) {
-            if (s.type == EnumTokenType.EXPRESSION) {
-                final ScriptExpression se = operands[s.getOperatorId()];
+        //System.out.println("Evaluating set : " + getFullRPN());
+        if (rpn.size() == 1) {
+            return ((NodeExpression)rpn.get(0)).getExpression().set(context, to, new ScriptType[0]);
+        } else for (Node s : rpn) {
+            if (s instanceof NodeExpression) {
+                final ScriptExpression se = ((NodeExpression)(s)).getExpression();
                 ////System.out.println(se);
                 final List<ScriptType<?>> arguments = new ArrayList<>();
-                if (!(s == out.getLast())) {
-                    for (int i = 0; i < s.arity; i++) {
+                if (!(s == rpn.get(rpn.size() - 1))) {
+                    for (int i = 0; i < ((NodeExpression)(s)).getArity(); i++) {
                         arguments.add(0, types.isEmpty() ? null : types.pop());
                     }
                     types.push(se == null ? null : se.get(context, arguments.toArray(new ScriptType[0])));
                 }
                 expressions.push(se);
-            } else if (s.type == EnumTokenType.OPERATOR) {
-                final ScriptOperator o = ScriptManager.operators.get(s.getOperatorId());
+            } else if (s instanceof NodeOperation) {
+                final ScriptOperator o = ((NodeOperation)(s)).getOperator();
                 if (o.unary) {
                     final ScriptType<?> o1 = types.pop();
                     final ScriptType<?> result = ScriptManager.getUnaryOperation(o1.getClass(), o).getOperation().operate(o1, null);
@@ -364,73 +322,15 @@ public class ExprCompiledExpression extends ScriptExpression {
                     types.push(result);
                     expressions.push(new ExprResult(result));
                 }
-
             }
         }
         ////System.out.println("Pop is: "+expressions.peek().getClass().getSimpleName());
         return expressions.pop().set(context, to, types.toArray(new ScriptType[0]));
     }
-
-
-    public static class CompiledToken {
-
-        private final EnumTokenType type;
-        private final int arity;
-        private final ScriptExpression expression;
-        private final int operatorId;
-
-        public CompiledToken(EnumTokenType tokenType) {
-            this.type = tokenType;
-            this.arity = 0;
-            this.expression = null;
-            this.operatorId = -1;
-        }
-
-        @Override
-        public String toString() {
-            if(type == EnumTokenType.EXPRESSION){
-                return expression == null ? "null" : expression.toString();
-            }else
-                return getOperator().toString();
-        }
-
-        public CompiledToken(int arity, ScriptExpression expression) {
-            this.arity = arity;
-            this.expression = expression;
-            this.operatorId = -1;
-            this.type = EnumTokenType.EXPRESSION;
-        }
-
-        public CompiledToken(ScriptOperator operator) {
-            this.arity = 0;
-            this.operatorId = ScriptManager.operators.indexOf(operator);
-            this.type = EnumTokenType.OPERATOR;
-            this.expression = null;
-        }
-
-        public EnumTokenType getType() {
-            return type;
-        }
-
-        public int getArity() {
-            return arity;
-        }
-
-        public ScriptExpression getExpression() {
-            return expression;
-        }
-
-        public int getOperatorId() {
-            return operatorId;
-        }
-
-        public ScriptOperator getOperator() {
-            return ScriptManager.operators.get(operatorId);
-        }
-    }
+     */
 
     @Override
     public String toString() {
-        return getFullRPN();
+        return "C:"+ast.toString();
     }
 }
